# guacamole-server

./: Dockerfile  Makefile.am  build_run.sh  configure.ac  guacd.conf.sample  xorg.conf.sample
src/guacd/: connection.c
src/protocols/xorg/: Makefile.am  README.md  capture.c  capture.h  client.c  client.h  cursor.c  cursor.h  design.md  display.c  display.h  input.c  input.h  scale.c  scale.h  settings.c  settings.h  user.c  user.h  xorg.c  xorg.h
